second attempt to fix input problem on mobile

--- a/style.css
+++ b/style.css
@@ -80,7 +80,7 @@ body {
 
 .content p {
     color: white;
-    font-size: clamp(1.5rem, 2.5vw, 2.5rem);
+    font-size: clamp(1.8rem, 2.5vw, 2.5rem);
     /* font-size: 2rem; */
     font-weight: 900;
     letter-spacing: .1rem;
@@ -150,7 +150,7 @@ button {
 }
 
 .inputValueAndButtonToCheck .reactionToResponse .numberAttempts {
-    font-size: clamp(1.6rem, 2.5vw, 2.4rem);
+    font-size: clamp(1.8rem, 2.5vw, 2.4rem);
 }
 
 
@@ -169,7 +169,7 @@ footer {
 }
 
 footer p {
-    font-size: clamp(1rem, 2.5vw, 2rem);
+    font-size: clamp(1.3rem, 2.5vw, 2rem);
     color: white;
     font-weight: bold;
 }
@@ -235,14 +235,14 @@ footer .links li:hover img {
 
 .contentModal .mensagem {
     /* font-size: 3.2rem; */
-    font-size: clamp(1rem, 2.5vw, 2rem);
+    font-size: clamp(1.5rem, 2.5vw, 2rem);
     color: white;
     font-weight: 800;
     text-align: center;
 }
 
 .contentModal .mensage_strong {
-    font-size: clamp(1rem, 2.5vw, 2rem);
+    font-size: clamp(1.7em, 2.5vw, 2rem);
     color: white;
     font-weight: 800;
     text-align: center;
